Added description. Created first list and found unique elements.

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -28,6 +28,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1: Counts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This first task is to create a dictionary from a given list, and to generate a value for each unique element that states the number of times that this element appears in the given list. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First create a list of values:\n",
+    "A = [10, 20, 10, 30, 20, 10, 50, 50, 40, 10, 40]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[1]:ThisPointer.com: How to convert a list to dictionary: https://thispointer.com/python-how-to-convert-a-list-to-dictionary/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30, 50, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Next step is to find the unique values withing the list:\n",
+    "unique_values_A=[]\n",
+    "for i in A:\n",
+    "    if i not in unique_values_A:\n",
+    "        unique_values_A.append(i)\n",
+    "print(unique_values_A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[2]: Infopedic Techie: Find the unique values in a list: https: //www.youtube.com/watch?v=7f2UJgig2yI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
