Found laborious manner of counting key elements.FOund way of creating dictionary of key values, but no count values.

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,6 +195,50 @@
    "metadata": {},
    "source": [
     "I would imagine, however, that this is the most tedious possible approach, and in the case of a larger list with more elements this might begin to become near impossible, and would also result in an extremely long piece of code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From a bit more trawling of a varietyof forums and tutorials I have found a way of creating a dictionary that gets us up to the next point, in which from just a few lines of code we have a dictionary of key elements, accompanied by an empty string. The next step is finding out how to pair the count numbers from the above function to the key elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10: '', 20: '', 30: '', 50: '', 40: ''}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create empty dictionary\n",
+    "# populate dictionary with key elements and accompanying\n",
+    "# empty strings using for loop & '.update'\n",
+    "converted_dict = {}\n",
+    "for i in A:\n",
+    "    converted_dict.update({i:\"\"})\n",
+    "print(converted_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "medium.com: Create a dictionary from a list: https://medium.com/swlh/create-a-dictionary-from-a-list-65742246ab4b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(I will just make a brief statement here to clarify that up until this point I had been labouring under the illusion that certain basic operators, (namely 'count' & 'set') were out of bounds for this module, and as a result had been trying to re-invent the wheel of sorts. I had been struggling to fit these alternative functions to fit the solution in an inumerate variety of failed permutations, but now that I have clarified that these operators do not fall under the criteria of \"any module from the standard library1 or otherwise\", I think the solution should be a bit more obvious. I will, however, leave the initial functions at least, in case there is any debate as to whether or not I suffered enough coming to a solution.)"
    ]
   },
   {
