--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,18 +814,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 1],\n",
-       "       [4, 1],\n",
-       "       [5, 5]], dtype=int64)"
+       "array([[3, 5],\n",
+       "       [1, 5],\n",
+       "       [4, 2]], dtype=int64)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,6 +834,113 @@
     "die = rng.integers(1, 6, (3, 2))\n",
     "die"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 5,  5, 10,  8,  6,  7,  7,  7,  8,  4,  6,  8,  9,  3,  6,  8,  9,\n",
+       "        7,  3,  8,  6,  5,  9,  8,  5,  6,  8,  5,  4,  6,  8,  4,  4,  9,\n",
+       "        4,  6,  7,  4,  6,  6,  6,  5,  2,  5,  3,  7,  7,  7,  9,  3,  9,\n",
+       "        9,  3,  6,  7,  7,  6,  8,  8,  5,  5,  6,  6,  8, 10,  9,  9,  5,\n",
+       "        6,  3,  5,  8,  6,  6,  2,  4,  8,  6,  4,  4,  4,  6,  3,  4,  7,\n",
+       "        5,  5,  6,  4,  6,  2,  3,  4,  5,  3,  8,  3,  7,  7,  3,  9,  3,\n",
+       "        3,  6,  9,  3,  7,  8,  5,  9,  5,  2,  7,  8,  5,  9,  6,  5,  3,\n",
+       "        7,  3,  6,  4,  5,  6,  7,  3,  8,  9,  4,  4,  6,  6,  7,  8,  6,\n",
+       "        5,  6,  4,  3,  6,  6,  6,  6,  4,  4,  4,  9,  8,  6,  5,  6,  6,\n",
+       "        3,  5,  7,  9,  5,  6,  2,  7,  6,  4,  3,  6,  6,  8,  4,  3,  6,\n",
+       "        8,  6,  6,  6,  3,  7,  6,  7,  8,  6,  9,  8,  4,  8,  6,  5,  9,\n",
+       "        6,  4,  8,  6,  9,  3,  8,  5,  8,  8,  5,  7,  9,  6,  7,  4,  5,\n",
+       "        5,  6,  3,  6,  5,  6,  4,  3,  4,  7,  4,  5,  7,  3,  5,  7,  7,\n",
+       "        6,  6,  2,  6,  6,  3,  2,  9,  6, 10, 10,  8,  6,  4,  7, 10,  6,\n",
+       "        3,  3,  6,  6,  8,  7,  7,  8,  5,  4,  9,  9,  5,  6,  2, 10,  5,\n",
+       "        7,  6,  7,  6,  8,  8,  3,  6,  6,  6,  9,  7,  2,  9,  2,  8,  9,\n",
+       "        8,  9,  6,  6,  7,  7,  7,  6,  8,  5,  5,  7,  7,  8,  6,  6,  7,\n",
+       "        9,  3,  5,  6,  3,  5,  7,  7,  6,  8,  4,  6,  7,  4,  6,  5,  6,\n",
+       "        9,  5,  9,  4,  5, 10,  7,  8,  7,  4,  3,  4,  6,  3, 10, 10,  5,\n",
+       "        8,  6,  3,  3,  9,  6,  2,  3,  7,  4,  7,  8,  8, 10,  9,  4,  8,\n",
+       "        7,  9,  5,  9,  7, 10,  6,  3,  5,  7,  6,  5,  6,  4,  5,  5,  8,\n",
+       "        4,  9,  9,  2,  6,  7,  6,  3,  5,  6,  3,  7,  9,  6,  9,  5,  4,\n",
+       "        3,  3,  4, 10,  7,  2,  5,  4,  7,  5,  2,  5,  6,  8,  6,  4,  6,\n",
+       "        5,  2,  4,  6,  3,  5,  8,  4,  8,  4,  5,  7,  8,  5,  4,  6,  4,\n",
+       "        5,  6,  5,  5,  6,  7,  9,  6,  6,  8,  8,  7, 10,  9, 10,  6,  9,\n",
+       "        9,  7,  6,  7,  6,  2,  6,  6,  6,  7,  5,  3,  4,  7,  9,  5,  6,\n",
+       "        6,  4,  6, 10,  7,  3,  4,  6,  7,  5,  5,  4,  6,  6,  6,  8,  4,\n",
+       "        6,  5,  8,  5,  2,  7,  3,  8,  4,  4,  6,  5,  7,  9,  6,  3,  6,\n",
+       "        2,  4,  8,  7,  4,  5,  4,  6,  5,  7,  6,  4,  5,  6,  7,  5,  7,\n",
+       "        4,  3,  4,  3,  3,  7,  7,  9,  8,  6,  8,  4,  6,  7,  2,  4,  6,\n",
+       "        7,  6,  5, 10,  3,  4,  6,  3,  8,  6,  6,  5,  3,  7,  3,  6,  8,\n",
+       "        5,  6,  5,  7,  7,  4,  4,  8,  8,  4,  8,  7,  7,  6,  4,  8,  4,\n",
+       "        9,  2,  7,  8,  8,  6,  9,  3,  2,  9,  8,  3,  4,  9,  3,  3,  4,\n",
+       "        5,  6,  5,  5,  7,  3,  5,  8,  7,  2,  9, 10, 10,  6,  7,  5,  4,\n",
+       "        7,  6,  6,  3,  7,  4,  6,  7,  5,  9,  2,  6,  7,  3,  8,  8,  9,\n",
+       "        8,  4,  3,  6,  5,  5, 10,  7,  4,  6, 10,  5,  2,  6,  8,  5,  7,\n",
+       "        4,  7,  9,  8,  7,  6,  8,  3,  6,  4,  8,  4,  5,  3,  7,  7,  8,\n",
+       "        7,  5,  7,  4,  6,  9,  3,  7,  7, 10,  9,  9,  5,  5,  4,  7, 10,\n",
+       "        7,  4, 10,  9,  5,  5,  7,  5,  2,  7,  5,  4,  8,  8,  5,  5,  6,\n",
+       "       10,  8, 10,  3,  3,  9,  5,  5,  9,  3,  5,  8,  7,  4,  5,  5,  7,\n",
+       "        7,  6,  7,  4,  5,  2,  4,  9,  6,  6,  9,  7,  4,  8,  6,  3,  6,\n",
+       "        7,  7,  5,  3,  2,  3,  9,  9,  6,  4,  7,  2, 10,  3,  6,  7,  8,\n",
+       "        5,  5,  4,  7,  5,  3,  3,  9,  9,  6,  6,  4,  5,  4,  5,  6,  2,\n",
+       "        9,  2,  8,  8,  8,  5,  6,  6,  6,  6,  8,  3,  8,  8,  6,  6,  6,\n",
+       "        5,  7,  9,  2,  8,  5,  8,  7,  7,  7,  3,  9, 10,  6,  8,  8,  5,\n",
+       "        3,  7,  7,  7,  8,  2,  8,  7,  5,  6,  5,  5,  9,  7,  7,  4,  6,\n",
+       "        3,  8,  6,  7,  6,  3,  7,  8,  5,  6,  7,  8,  2,  5,  5,  9,  6,\n",
+       "        6,  2,  5,  6,  8,  7,  7,  4,  4,  3,  8,  4,  8,  5,  5,  4,  4,\n",
+       "        4,  6,  8,  3,  7,  9,  4,  5,  6,  6,  7,  6,  7,  7,  4,  8,  7,\n",
+       "        6,  5,  7,  7,  6,  6,  7,  7,  8,  3,  7,  3,  6,  9,  2,  5,  6,\n",
+       "        8,  5,  6,  3,  8,  6,  4,  5,  6,  2,  7,  7,  5,  7,  6,  9,  8,\n",
+       "        9,  6,  5,  6,  8,  6,  8,  6,  7,  6,  7,  4,  6,  9,  7,  7,  8,\n",
+       "        7,  3,  8,  6,  8,  4,  9,  8,  3,  9,  7,  8,  6,  2,  6,  7,  7,\n",
+       "        3,  5,  7,  4,  6,  6,  6,  5,  9,  4,  4,  4,  5,  5,  3,  4,  7,\n",
+       "        3,  5,  7,  7,  5,  6,  9,  5,  3, 10,  6,  7,  7,  5,  7,  9,  7,\n",
+       "        8,  3,  3,  5,  3,  7,  5,  3,  2,  7,  7,  5,  6,  8,  3,  5,  7,\n",
+       "        5,  6,  5,  8,  4,  3,  4,  4,  5,  5,  4,  2,  2, 10,  5,  7,  4,\n",
+       "        7,  7,  5,  6,  7,  2,  3,  8,  4,  7,  4,  5,  3,  9,  8,  5,  6,\n",
+       "        7,  7,  8,  5,  9,  6,  6,  8,  8,  7,  9,  7,  4,  7],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a varable 'k' to signify number of dice:\n",
+    "k = 2\n",
+    "\n",
+    "# and a variable 'n' for number of times these dice are rolled\n",
+    "n = 1000\n",
+    "\n",
+    "dicerolls = sum(rng.integers(1, 6, (k, n)))\n",
+    "dicerolls"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[8]:geeksforgeeks.org: python progra to find sum of array: https://www.geeksforgeeks.org/python-program-to-find-sum-of-array/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[7]: Crash_Bandicode: My own project on Numpy.Random: https://github.com/Crash-Bandicode/numpy-random/blob/main/numpy.random.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
