Added description of binomial function from PFDA project and references.

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -1194,6 +1194,66 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our other module 'Programming for Data Analytics' we did project in which we investigated the Numpy.Random module in python. In that investigation I discussed several probability distributions, one of which was the binomial distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a result I will quote some of that module here and include the same references I used for that.\n",
+    "\"- \"The Bernoulli distribution represents the success or failure of a single Bernoulli trial\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ie: Likelihood of coing flip is even distribution = 0.5/0.5, but the likelihood of rolling a six on a die would be 0.17 success/0.83 failure.\n",
+    "- \"The Binomial Distribution represents the number of successes and failures in n number of independent Bernoulli trials for some given value of n.\" [5]\n",
+    "- It is basically a probability of probabilities, ie: the success rate or the likeliehood of a specific set of outcomes occuring vs other possible outcomes\n",
+    "- It is useful when deling with uncertainty regarding a long run frequency.\" [7]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[12] Why is a binomial distribution bell-shaped? https://stats.stackexchange.com/questions/176425/why-is-a-binomial-distribution-bell-shaped"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\"- An example of this would be if a car manufacturer has a 0.13 percent chance of producing a faulty model, the binomial distribution would describe the most likely number of cars that would be faulty if the manufacturer made 10,000 cars. It doesn't guarantee the outcome will be 1300, but it tells you the probability of that outcome. It will also tell you the probability of the number being higher or lower."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "•\tBasically the distibution will run a number of bernoulli trialls and return a success rate for a given outcome.\" [7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[13] 3Blue1Brown: Binomial distributions | Probabilities of probabilities, part 1 https://www.youtube.com/watch?v=8idr1WZ1A7Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
