imported modules. created binomial function for 1000 iterations of 100 flips.

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -1192,6 +1192,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "rng = np.random.default_rng()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>"
    ]
   },
@@ -1245,7 +1263,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[13] 3Blue1Brown: Binomial distributions | Probabilities of probabilities, part 1 https://www.youtube.com/watch?v=8idr1WZ1A7Q"
+    "[13] 3Blue1Brown: Binomial distributions | Probabilities of probabilities, part 1 https://www.youtube.com/watch?v=8idr1WZ1A7Q\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "Here we have number of coin flips - 'n'(100), and the probability of getting a heads - p(0.5)\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Then we put those conditions into the Numpy.random.binomial function for it to run this test 1000 times, giving us an array of 1000 outcomes as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([44, 63, 58, 54, 46, 46, 44, 49, 47, 61, 42, 45, 41, 49, 45, 45, 50,\n",
+       "       55, 47, 43, 47, 49, 40, 51, 48, 51, 41, 51, 48, 57, 49, 52, 54, 45,\n",
+       "       55, 47, 50, 50, 49, 42, 47, 57, 53, 57, 55, 47, 58, 56, 42, 48, 50,\n",
+       "       54, 49, 48, 52, 41, 52, 46, 43, 46, 48, 48, 52, 51, 47, 51, 54, 55,\n",
+       "       56, 48, 52, 56, 50, 48, 54, 47, 49, 53, 45, 52, 51, 54, 52, 54, 52,\n",
+       "       45, 51, 46, 44, 50, 57, 49, 47, 46, 41, 41, 54, 54, 44, 48, 54, 58,\n",
+       "       52, 52, 57, 52, 44, 51, 48, 52, 51, 44, 52, 56, 47, 45, 60, 43, 60,\n",
+       "       52, 53, 46, 45, 55, 51, 43, 52, 46, 55, 54, 57, 54, 57, 46, 53, 41,\n",
+       "       47, 52, 53, 56, 40, 52, 56, 49, 49, 49, 45, 57, 52, 47, 56, 63, 48,\n",
+       "       55, 57, 43, 56, 45, 47, 50, 49, 45, 55, 50, 51, 48, 37, 53, 53, 57,\n",
+       "       49, 47, 45, 43, 48, 45, 55, 53, 47, 43, 49, 52, 50, 44, 47, 55, 47,\n",
+       "       55, 49, 52, 50, 59, 52, 51, 51, 49, 51, 46, 59, 51, 47, 39, 48, 58,\n",
+       "       47, 50, 53, 49, 58, 44, 52, 41, 47, 55, 52, 51, 50, 46, 41, 58, 41,\n",
+       "       49, 48, 55, 41, 47, 49, 59, 49, 49, 60, 47, 55, 47, 54, 52, 42, 45,\n",
+       "       50, 53, 48, 51, 52, 60, 54, 47, 52, 51, 51, 51, 51, 46, 61, 49, 46,\n",
+       "       46, 50, 48, 50, 44, 50, 52, 63, 40, 57, 56, 54, 53, 45, 48, 50, 45,\n",
+       "       49, 52, 52, 47, 48, 47, 48, 47, 56, 55, 51, 49, 45, 43, 51, 44, 49,\n",
+       "       58, 37, 50, 54, 42, 46, 58, 57, 48, 53, 41, 43, 46, 50, 62, 52, 54,\n",
+       "       56, 48, 51, 54, 45, 49, 55, 58, 53, 46, 50, 55, 51, 46, 52, 47, 47,\n",
+       "       50, 49, 58, 53, 48, 47, 52, 40, 44, 50, 55, 50, 55, 52, 55, 50, 42,\n",
+       "       45, 55, 54, 43, 53, 49, 57, 44, 42, 51, 44, 48, 42, 41, 46, 56, 44,\n",
+       "       50, 54, 48, 54, 51, 45, 46, 50, 51, 46, 56, 46, 49, 53, 42, 39, 48,\n",
+       "       50, 54, 55, 56, 46, 50, 61, 57, 50, 47, 48, 53, 42, 39, 57, 41, 47,\n",
+       "       53, 48, 50, 50, 46, 53, 47, 56, 57, 51, 49, 53, 53, 46, 52, 48, 51,\n",
+       "       59, 44, 42, 46, 50, 53, 47, 64, 57, 50, 47, 48, 46, 45, 60, 53, 45,\n",
+       "       46, 46, 45, 51, 48, 42, 54, 47, 47, 51, 52, 47, 46, 63, 57, 50, 52,\n",
+       "       46, 48, 46, 45, 48, 50, 47, 53, 50, 48, 52, 47, 42, 41, 35, 56, 48,\n",
+       "       53, 49, 50, 55, 51, 51, 52, 48, 50, 46, 53, 41, 59, 47, 47, 55, 44,\n",
+       "       46, 47, 44, 41, 40, 54, 49, 50, 47, 47, 48, 53, 40, 54, 51, 61, 60,\n",
+       "       53, 62, 55, 43, 52, 48, 49, 48, 47, 52, 53, 47, 51, 53, 56, 48, 57,\n",
+       "       43, 59, 50, 49, 43, 44, 40, 47, 57, 44, 51, 56, 56, 47, 46, 59, 58,\n",
+       "       56, 42, 48, 43, 52, 43, 51, 48, 48, 50, 47, 46, 51, 48, 58, 50, 54,\n",
+       "       54, 56, 50, 47, 47, 49, 57, 48, 52, 46, 49, 48, 50, 52, 49, 59, 49,\n",
+       "       51, 48, 46, 55, 48, 52, 48, 42, 44, 47, 52, 43, 46, 42, 46, 42, 51,\n",
+       "       54, 56, 56, 41, 54, 48, 48, 53, 53, 50, 49, 53, 54, 49, 51, 47, 51,\n",
+       "       55, 57, 54, 50, 52, 53, 44, 45, 45, 48, 49, 54, 45, 45, 48, 45, 52,\n",
+       "       53, 49, 51, 54, 51, 49, 55, 49, 46, 47, 45, 48, 51, 44, 49, 49, 53,\n",
+       "       41, 56, 37, 60, 52, 53, 60, 49, 56, 47, 51, 47, 58, 45, 47, 54, 43,\n",
+       "       51, 44, 51, 56, 48, 54, 48, 46, 59, 52, 52, 50, 45, 44, 49, 54, 32,\n",
+       "       46, 50, 55, 58, 57, 52, 47, 53, 56, 43, 47, 53, 54, 52, 51, 53, 55,\n",
+       "       54, 49, 44, 45, 52, 50, 52, 51, 56, 57, 48, 55, 42, 45, 56, 53, 49,\n",
+       "       46, 52, 58, 51, 49, 41, 49, 49, 55, 37, 57, 45, 44, 50, 47, 50, 44,\n",
+       "       58, 49, 46, 53, 36, 49, 58, 51, 51, 45, 49, 46, 49, 38, 56, 56, 52,\n",
+       "       60, 59, 47, 44, 43, 55, 46, 47, 50, 47, 35, 45, 46, 52, 48, 46, 55,\n",
+       "       44, 57, 53, 49, 49, 43, 47, 46, 43, 49, 51, 53, 50, 51, 56, 58, 42,\n",
+       "       53, 46, 56, 48, 41, 49, 41, 43, 53, 50, 50, 53, 49, 54, 53, 52, 49,\n",
+       "       44, 59, 46, 54, 50, 44, 51, 45, 53, 40, 50, 52, 54, 51, 41, 51, 52,\n",
+       "       54, 52, 59, 52, 48, 45, 45, 47, 46, 50, 48, 52, 52, 51, 46, 49, 57,\n",
+       "       56, 59, 53, 51, 50, 52, 52, 43, 51, 50, 55, 51, 43, 53, 49, 54, 56,\n",
+       "       51, 49, 48, 57, 47, 51, 50, 47, 56, 43, 46, 58, 44, 55, 48, 47, 45,\n",
+       "       52, 55, 44, 49, 52, 43, 58, 45, 55, 50, 44, 48, 49, 55, 48, 51, 48,\n",
+       "       48, 52, 41, 68, 52, 53, 53, 43, 56, 47, 52, 56, 49, 51, 48, 40, 49,\n",
+       "       50, 56, 54, 54, 51, 45, 60, 47, 45, 46, 46, 50, 47, 47, 48, 45, 55,\n",
+       "       47, 46, 50, 47, 43, 58, 57, 45, 50, 48, 58, 46, 51, 57, 65, 43, 51,\n",
+       "       49, 49, 48, 43, 54, 49, 51, 47, 51, 45, 49, 43, 59, 46, 46, 46, 44,\n",
+       "       51, 38, 53, 49, 44, 49, 53, 47, 53, 47, 57, 42, 57, 45, 45, 48, 39,\n",
+       "       51, 51, 50, 49, 47, 47, 52, 56, 47, 51, 48, 51, 48, 46, 46, 56, 58,\n",
+       "       53, 52, 57, 54, 49, 46, 46, 43, 49, 47, 51, 52, 55, 43, 51, 52, 49,\n",
+       "       54, 46, 55, 51, 56, 56, 53, 55, 45, 54, 51, 48, 49, 55],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create variables to simulate 100 coin flips and use binomial to run test 100o times.\n",
+    "coin = n, p = 100, 0.5\n",
+    "flips = rng.binomial(n, p, 1000)\n",
+    "flips"
    ]
   },
   {
