Added description of the nature of the paradox. Added references that will most likel be refered back to throughout task. Added divised plan of experimentation

--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -1498,6 +1498,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'Simpson' Paradox' is a term used in data analytics for a phenomenon that may occur when two or more similar datasets are combined, in which the original trends applied to both cause the new combined trend to become severely altered, or often fully inverted. Here we will explore why this occurs, what it means, and what it's implications may be in real life."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[14] Wikepedia: Simpson's paradox: https://en.wikipedia.org/wiki/Simpson%27s_paradox\n",
+    "\n",
+    "[15] Britanica.org: Simpson's Paradox Explained: https://www.britannica.com/topic/Simpsons-paradox\n",
+    "\n",
+    "[16] BMC Medical Research Methodology: https://bmcmedresmethodol.biomedcentral.com/articles/10.1186/1471-2288-8-34"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best way to illustrate the phenomenon is to create four sepperate scatter plots representing similar but different datasets. We can use the function of a line with added noise to reverse the concept of linear regression and simulate similar data sets of given trends. We will then combine the data sets and perform linear regression on the combined scatter plot in order to visualise the new trend created."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
