--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,10 +1524,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create some x values:\n",
+    "x1 = np.linspace(0.0, 10.0, 100)\n",
+    "x2 = np.linspace(2.0, 12.0, 100)\n",
+    "x3 = np.linspace(4.0, 14.0, 100)\n",
+    "x4 = np.linspace(6.0, 16.0, 100)"
+   ]
   }
  ],
  "metadata": {
