--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,6 +1534,26 @@
     "x3 = np.linspace(4.0, 14.0, 100)\n",
     "x4 = np.linspace(6.0, 16.0, 100)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create some y values:\n",
+    "y1 = 2.0 * x1 + 1\n",
+    "y2 = 4.0 * x2 + 2\n",
+    "y3 = 6.0 * x3 + 3\n",
+    "y4 = 8.0 * x4 + 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
